0.7

operations for matrix and vector types in scheme
primitive (set) and (get) for changing per vert primitive values (pdata)
(get-transform) returns object transform matrix in world space
nurbs objects
(hide)
(draw-instance)
(get-camera-transform)
(make-nurbs-sphere) (make-burbs-plane)
removed flocking stuff - should be a toplevel script
more error checking

0.6

scons build system
OSC support with (start-osc) and (from-osc)
new physics commands: (gravity), (set-mass) and (surface-params)
removed fltk
removed fluxface
Built in OpenGL editor
multiple editor workspaces
changed occurances of _ to - in scheme functions to match standard
fftw3 support
decent error reports from guile (still go to commandline)
keyboard support improved
more scripts, including a game.scm example

0.5

assert build error fixed
"Insufficient GL support" error in fltk fixed
texture loader only caches one copy of each texture
much faster retained mode scenegraph lookups
fullscreen mode ("f" or "w" in renderer window)
fps clamping
init $HOME/.fluxus.scm sourced on startup
(start_framedump) (end_framedump) tiff framesave
F5 without text selected executes all
commandline script load
(build_line)
(random) changed to (flxrnd)
(getharmonic) now wraps the harmonic no. so you always get something
(source) loads and executes scripts
(clear_fluxface) crash fixed
fluxface bug fixes and tidy ups
physics groundplane crash fixed
(make_light) and light descriptions
sphere builder fix
parentheses highlighting - good idea for scheme ;)
lock camera works again
polybuilder turtle (normals not working yet, use wireframe hints)
(collisions) allows you to turn off ode collisions - defaults off
(process) for offline wavfile processing

0.4
split up into libfluxus, libfluxphysics and main app
fixed newbie texturing errors - should be much faster
added ambient and emmisive to the materials (shaded f+b)
smoothed cylinders
fixed spheres 
fixed problem with fltk-gl depth buffer
fixed active_sphere