@@ -1,0 +1,6 @@
+
+
+(clear)
+(texture (load-texture "scribblefont.png"))
+(build-text "hello")
+(clear-colour (vector 1 1 1))
